# 2do

./: .env  README.md  commands.py  install.sh  main.py  pyproject.toml
cli/: __init__.py  completer.py  handlers.py
cli/renderers/: exit.py  help.py  plan.py  unknown.py
db/: command_history.py  database.db  engine.py  models.py  plan.py  task.py
